src/test/deca/context/valid/SansObjet/Cast-DeclVar-float-floatVar.deca
// Description:
//    Declaration of a float variable using a float cast on a float variable .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 14/01/2022 

{
    float x =  10.01 ; 
    float y =  (float) ( x ) ; 
}
